--- a/response.html
+++ b/response.html
@@ -14,7 +14,7 @@
             <h1>John Berger / Ways of Seeing, Reponse.</h1>
             <div class="paragraph">
                 <p>
-                   I found it really interesting how he talks about how the reproduction of art  
+                   I found it really interesting how he talks about the reproduction of art.  
                     He says that we used to come to it but now it comes to us. Berger explores the concept of art and how it has been perceived and represented throughout history. He delves into the idea that our understanding of art is deeply influenced by the way it is reproduced and
                     presented, such as in paintings, photographs, and advertisements. Berger argues that we don't see art in isolation but through a complex lens of cultural, social, and historical factors
                 </p>
